Fix a few minor issues with jdk9-ea